--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loading...</title>
-    <link rel="stylesheet" href="../public/stylesheets/output.css">
+    <link rel="stylesheet" href="./public/stylesheets/output.css">
     <style>
         #loading-screen {
             width: 100%;
@@ -18,6 +18,6 @@
 </head>
 <body>
     <div id="loading-screen"></div>
-    <script src="../public/javascripts/loading.js"></script>
+    <script src="./public/javascripts/loading.js"></script>
 </body>
 </html>
