--- a/loading.html
+++ b/loading.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loading Page</title>
-    <link rel="stylesheet" href="../public/stylesheets/loading.css">
+    <link rel="stylesheet" href="./public/stylesheets/loading.css">
 </head>
 <body>
     <div class="loading-container">
