--- a/home.html
+++ b/home.html
@@ -317,15 +317,15 @@
     <!-- Section 4 -->
     <div class="section-4 h-[65%] border border-zinc-700 rounded-lg mx-6 sm:mx-32 lg:mx-40">
         <h1 class="text-center text-3xl font-bold mt-3">Insights</h1>
-        <!-- <h3 class="text-center text-2xl font-mono leading-loose">
-            📚✨ My Notion Pages ✨📚
-        </h3> -->
+        <h3 class="text-center text-lg sm:text-2xl font-mono leading-loose italic">
+            📚✨ Notion Pages ✨📚<span class="text-sm sm:text-[16px] font-sans font-extrabold p-2 mx-6 bg-yellow-400 text-red-600 rounded-full">Clickable</span>
+        </h3>
         <div class="carousel flex overflow-x-scroll space-x-4 p-4">
             <!-- Carousel Item 1: Ignite the Vision -->
             <div class="carousel-item flex-shrink-0 w-96 h-80 bg-cover bg-center rounded-lg shadow-lg"
                  style="background-image: url('./public/images/L.webp');">
-                <a href="https://www.notion.so/insight1" target="_blank" class="block w-full h-full">
-                    <div class="overlay bg-black bg-opacity-50 flex flex-col items-center justify-between h-full">
+                <a href="https://yash-v22.notion.site/" target="_blank" class="block w-full h-full">
+                    <div class="overlay bg-black bg-opacity-80 flex flex-col items-center justify-between h-full">
                         <div></div>
                         <div class="flex flex-col justify-center items-center">
                             <svg width="150" height="5" viewBox="0 0 150 5" class="mb-2">
@@ -342,8 +342,8 @@
             <!-- Carousel Item 2: Envision Beyond -->
             <div class="carousel-item flex-shrink-0 w-96 h-80 bg-cover bg-center rounded-lg shadow-lg"
                  style="background-image: url('./public/images/O.webp');">
-                <a href="https://www.notion.so/insight2" target="_blank" class="block w-full h-full">
-                    <div class="overlay bg-black bg-opacity-50 flex flex-col items-center justify-between h-full">
+                <a href="https://yash-v22.notion.site/Git-GitHub-commands-134cbe14f3cc8088af5fcbf072ee63bf?pvs=4" target="_blank" class="block w-full h-full">
+                    <div class="overlay bg-black bg-opacity-80 flex flex-col items-center justify-between h-full">
                         <div></div>
                         <div class="flex flex-col justify-center items-center">
                             <svg width="180" height="5" viewBox="0 0 180 5" class="mb-2">
@@ -352,7 +352,7 @@
                             <div class="text-[#33C9FF] text-3xl font-bold font-cinzel tracking-widest uppercase">Envision Beyond</div>
                             <div class="text-[#E5E7EB] text-lg font-semibold font-roboto tracking-wide mt-2">Step into Possibilities</div>
                         </div>
-                        <div class="text-blue-300 text-2xl font-extrabold font-roboto tracking-wide mt-1 italic hover:text-blue-500 hover:scale-105">🔍 <u>Establish Web App.</u></div>
+                        <div class="text-blue-300 text-2xl font-extrabold font-roboto tracking-wide mt-1 italic hover:text-blue-500 hover:scale-105">⭐ <u>Git/GitHub(commands)</u></div>
                     </div>
                 </a>
             </div>
@@ -360,13 +360,17 @@
             <!-- Carousel Item 3: Awaken Insight -->
             <div class="carousel-item flex-shrink-0 w-96 h-80 bg-cover bg-center rounded-lg shadow-lg"
                  style="background-image: url('./public/images/V.webp');">
-                <a href="https://www.notion.so/insight3" target="_blank" class="block w-full h-full">
-                    <div class="overlay bg-black bg-opacity-50 flex flex-col items-center justify-center h-full">
-                        <svg width="200" height="5" viewBox="0 0 200 5" class="mb-2">
-                            <line x1="0" y1="2.5" x2="200" y2="2.5" stroke="#FFD700" stroke-width="5" />
-                        </svg>
-                        <div class="text-[#FFD700] text-3xl font-bold font-cinzel tracking-widest uppercase">Awaken Insight</div>
-                        <div class="text-[#E5E7EB] text-lg font-semibold font-roboto tracking-wide mt-2">Embark on a Journey Beyond</div>
+                <a href="https://yash-v22.notion.site/Web-Dev-Styling-Roadmap-134cbe14f3cc80d49ba9f0128cf4687b?pvs=4" target="_blank" class="block w-full h-full">
+                    <div class="overlay bg-black bg-opacity-80 flex flex-col items-center justify-between h-full">
+                        <div></div>
+                        <div class="flex flex-col justify-center items-center">
+                            <svg width="200" height="5" viewBox="0 0 200 5" class="mb-2">
+                                <line x1="0" y1="2.5" x2="200" y2="2.5" stroke="#FFD700" stroke-width="5" />
+                            </svg>
+                            <div class="text-[#FFD700] text-3xl font-bold font-cinzel tracking-widest uppercase">Awaken Insight</div>
+                            <div class="text-[#E5E7EB] text-lg font-semibold font-roboto tracking-wide mt-2">Embark on a Journey Beyond</div>
+                        </div>
+                        <div class="text-blue-300 text-2xl font-extrabold font-roboto tracking-wide mt-1 italic hover:text-blue-500 hover:scale-105">🛣️ <u>Styling Roadmap</u></div>
                     </div>
                 </a>
             </div>
@@ -375,12 +379,16 @@
             <div class="carousel-item flex-shrink-0 w-96 h-80 bg-cover bg-center rounded-lg shadow-lg"
                  style="background-image: url('./public/images/E.webp');">
                 <a href="https://www.notion.so/insight4" target="_blank" class="block w-full h-full">
-                    <div class="overlay bg-black bg-opacity-50 flex flex-col items-center justify-center h-full">
-                        <svg width="160" height="5" viewBox="0 0 160 5" class="mb-2">
-                            <line x1="0" y1="2.5" x2="160" y2="2.5" stroke="#c376ff" stroke-width="5" />
-                        </svg>
-                        <div class="text-[#c376ff] text-3xl font-extrabold font-cinzel tracking-widest uppercase">Emerge Stronger</div>
-                        <div class="text-[#E5E7EB] text-lg font-semibold  font-roboto tracking-wide mt-1">Rise to New Heights</div>
+                    <div class="overlay bg-black bg-opacity-80 flex flex-col items-center justify-between h-full">
+                        <div></div>
+                        <div class="flex flex-col justify-center items-center">
+                            <svg width="160" height="5" viewBox="0 0 160 5" class="mb-2">
+                                <line x1="0" y1="2.5" x2="160" y2="2.5" stroke="#c376ff" stroke-width="5" />
+                            </svg>
+                            <div class="text-[#c376ff] text-3xl font-extrabold font-cinzel tracking-widest uppercase">Emerge Stronger</div>
+                            <div class="text-[#E5E7EB] text-lg font-semibold  font-roboto tracking-wide mt-1">Rise to New Heights</div>
+                        </div>
+                        <div class="text-blue-300 text-2xl font-extrabold font-roboto tracking-wide mt-1 italic hover:text-blue-500 hover:scale-105">🔍 <u>Establish Web App.</u></div>
                     </div>
                 </a>
             </div>
