--- a/home.html
+++ b/home.html
@@ -177,7 +177,26 @@
             </div>
 
             <!-- <div id="projects" class="horizontal border-4 border-zinc-900"></div> -->
-            <!-- Project 3 -->
+            <!-- Project 4 -->
+            <div class="w-[100%] h-[100%] p-2 mt-9">
+                <div class="project-heading">
+                    <div class="flex gap-5 justify-center items-center">
+                    <h1 class="text-3xl font-bold md:text-4xl mb-1 lg:mb-0 text-[#14a398]">Pay Safe</h1>
+                    <div class="flex">
+                        <!-- <a target="_blank" href="https://trip-with-ease.onrender.com/"><img src="https://img.icons8.com/?size=50&id=J5CmaHDg2D4C&format=png&color=FFFFFF" alt=""></a> -->
+                        <a target="_blank" href="https://github.com/Yash2204V/paysafe"><img src="https://img.icons8.com/?size=50&id=LoL4bFzqmAa0&format=png&color=FFFFFF" alt=""></a>
+                    </div>
+                    </div>
+                    <div class="flex gap-2 justify-center items-center mb-[9px] md:mb-2 lg:mb-1">
+                        <img src="https://img.icons8.com/?size=30&id=78977&format=png&color=FFFFFF" alt="">
+                        <p class="text-xl font-mono md:text-2xl ">Pay Safer & Better</p>
+                        <img src="https://img.icons8.com/?size=30&id=78977&format=png&color=FFFFFF" alt="">
+                    </div>
+                </div>
+                <div class="reference flex flex-col justify-center items-center">
+                    <video class="h-[80%] w-[100%] lg:w-[60%] rounded-md" src="./public/pay-safe.mkv" muted loop autoplay playsinline></video>
+                </div>
+            </div>
             <div class="w-[100%] h-[100%] p-2 mt-9">
                 <div class="project-heading">
                     <div class="flex gap-5 justify-center items-center">
@@ -199,7 +218,7 @@
             </div>
 
             <!-- <div id="projects" class="horizontal border-4 border-zinc-900"></div> -->
-            <!-- Project 4 -->
+            <!-- Project 5 -->
             <div class="w-[100%] h-[100%] p-2 mt-9">
                 <div class="project-heading">
                     <div class="flex gap-5 justify-center items-center">
@@ -324,7 +343,7 @@
             <!-- Carousel Item 1: Ignite the Vision -->
             <div class="carousel-item flex-shrink-0 w-96 h-80 bg-cover bg-center rounded-lg shadow-lg"
                  style="background-image: url('./public/images/L.webp');">
-                <a href="https://yash-v22.notion.site/" target="_blank" class="block w-full h-full">
+                <a href="https://yash-v22.notion.site/Establish-MERN-App-134cbe14f3cc801ca570d07352a28b8d?pvs=4" target="_blank" class="block w-full h-full">
                     <div class="overlay bg-black bg-opacity-80 flex flex-col items-center justify-between h-full">
                         <div></div>
                         <div class="flex flex-col justify-center items-center">
@@ -334,7 +353,7 @@
                             <div class="text-[#FF5733] text-3xl font-bold font-cinzel tracking-widest uppercase">Ignite the Vision</div>
                             <div class="text-[#E5E7EB] text-lg font-semibold font-roboto tracking-wide mt-1">Unlock Potential Within</div>
                         </div>
-                        <div class="text-blue-300 text-2xl font-bold font-roboto tracking-wide mt-1 italic hover:text-blue-500 hover:scale-105">📂 <u>Backend Structure</u></div>
+                        <div class="text-blue-300 text-2xl font-bold font-roboto tracking-wide mt-1 italic hover:text-blue-500 hover:scale-105">🔍 <u>Establish MERN App.</u></div>
                     </div>
                 </a>
             </div>
@@ -378,7 +397,7 @@
             <!-- Carousel Item 4: Emerge Stronger -->
             <div class="carousel-item flex-shrink-0 w-96 h-80 bg-cover bg-center rounded-lg shadow-lg"
                  style="background-image: url('./public/images/E.webp');">
-                <a href="https://www.notion.so/insight4" target="_blank" class="block w-full h-full">
+                <a href="https://yash-v22.notion.site/" target="_blank" class="block w-full h-full">
                     <div class="overlay bg-black bg-opacity-80 flex flex-col items-center justify-between h-full">
                         <div></div>
                         <div class="flex flex-col justify-center items-center">
@@ -388,7 +407,7 @@
                             <div class="text-[#c376ff] text-3xl font-extrabold font-cinzel tracking-widest uppercase">Emerge Stronger</div>
                             <div class="text-[#E5E7EB] text-lg font-semibold  font-roboto tracking-wide mt-1">Rise to New Heights</div>
                         </div>
-                        <div class="text-blue-300 text-2xl font-extrabold font-roboto tracking-wide mt-1 italic hover:text-blue-500 hover:scale-105">🔍 <u>Establish Web App.</u></div>
+                        <div class="text-blue-300 text-2xl font-extrabold font-roboto tracking-wide mt-1 italic hover:text-blue-500 hover:scale-105">📂 <u>Backend Structure</u></div>
                     </div>
                 </a>
             </div>
