--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loading...</title>
-    <link rel="stylesheet" href="./public/stylesheets/output.css">
+    <title>Yash Varma | Portfolio</title>
+    <link rel="stylesheet" href="./public/stylesheets/loading.css">
 </head>
 <body>
-    <div id="loading-screen"></div>
+    <div class="loading-container">
+        <div class="loading-bar"></div>
+        <div class="bird"></div>
+    </div>
     <script src="./public/javascripts/loading.js"></script>
 </body>
 </html>
