--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     </div>
                 </div>
                 <div class="reference flex flex-col justify-center items-center">
-                    <video class="h-[80%] w-[100%] lg:w-[60%] rounded-md" src="./public/LavenDish.mkv" muted loop autoplay playsinline></video>
+                    <video class="h-[80%] w-[100%] lg:w-[60%] rounded-md" src="./public/LavenDish.mp4" muted loop autoplay playsinline></video>
                 </div>
 
             </div>
@@ -165,7 +165,7 @@
                     </div>
                 </div>
                 <div class="reference flex flex-col justify-center items-center">
-                    <video class="h-[80%] w-[100%] lg:w-[60%] rounded-md" src="./public/foodsavR.mkv" muted loop autoplay playsinline></video>
+                    <video class="h-[80%] w-[100%] lg:w-[60%] rounded-md" src="./public/foodsavR.mp4" muted loop autoplay playsinline></video>
                 </div>
 
             </div>
@@ -188,7 +188,7 @@
                     </div>
                 </div>
                 <div class="reference flex flex-col justify-center items-center">
-                    <video class="h-[80%] w-[100%] lg:w-[60%] rounded-md" src="./public/pay-safe.mkv" muted loop autoplay playsinline></video>
+                    <video class="h-[80%] w-[100%] lg:w-[60%] rounded-md" src="./public/pay-safe.mp4" muted loop autoplay playsinline></video>
                 </div>
             </div>
             <div class="w-[100%] h-[100%] p-2 mt-9">
@@ -207,7 +207,7 @@
                     </div>
                 </div>
                 <div class="reference flex flex-col justify-center items-center">
-                    <video class="h-[80%] w-[100%] lg:w-[60%] rounded-md" src="./public/trip-with-ease.mkv" muted loop autoplay playsinline></video>
+                    <video class="h-[80%] w-[100%] lg:w-[60%] rounded-md" src="./public/trip-with-ease.mp4" muted loop autoplay playsinline></video>
                 </div>
             </div>
 
